--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "framework": "nextjs",
   "buildCommand": "pnpm run build",
   "devCommand": "pnpm run dev",
-  "installCommand": "pnpm install"
+  "installCommand": "pnpm install",
+  "settings": {
+    "packageManager": "pnpm"
+  }
 } 
