fix: remove packageManager from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,5 @@
   "framework": "nextjs",
   "buildCommand": "pnpm run build",
   "devCommand": "pnpm run dev",
-  "installCommand": "pnpm install",
-  "packageManager": "pnpm"
+  "installCommand": "pnpm install"
 } 
