--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "pnpm run build",
-  "devCommand": "pnpm run dev",
-  "installCommand": "pnpm install"
+  "framework": "nextjs"
 } 
