fix: update pnpm and Node.js configuration for Vercel deployment

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,6 @@
 auto-install-peers=true
 strict-peer-dependencies=false
 enable-pre-post-scripts=true
+use-node-version=20.11.1
+use-pnpm=true
 engine-strict=true 
