--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "packageManager": "pnpm@10.0.0",
   "engines": {
-    "node": "20.x"
+    "node": ">=20.x"
   },
   "scripts": {
     "dev": "next dev",
@@ -60,7 +60,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.12.4",
     "sonner": "^1.7.2",
-    "stripe": "^18.1.0",
+    "stripe": "^13.11.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
