--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "packageManager": "pnpm@10.0.0",
   "engines": {
-    "node": ">=20.x"
+    "node": "20.11.1"
   },
   "scripts": {
     "dev": "next dev",
